--- a/ATIVIDADE 1/style.css
+++ b/ATIVIDADE 1/style.css
@@ -1,31 +1,31 @@
 .A {
-    background-color: #ffae00;
-    width: 500px;
-    height: 500px;
+    background-color: #00a2ff;
+    width: 250px;
+    height: 250px;
 }
 
 .B {
-    background-color: #15DF22;
-    height: 50%;
-    width: 50%;
+    background-color: #d2df15;
+    height: 60%;
+    width: 70%;
 }
 
 .C {
-    color: white; 
-    background-color: red; 
-    font-size: 25px; 
-    font-family: monospace; 
-    font-weight: 500;
+    color: rgb(196, 148, 19);
+    background-color: rgb(0, 255, 200);
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
 }
 
 .D {
-    background-color: rgb(15, 156, 199); 
-    width: 50%;
-    height: 50vh;
+    background-color: rgb(199, 196, 15);
+    width: 80%;
+    height: 10vh;
 }
 
 .E {
-    width: 75vw;
-    height: 50%;
-    background-color: rgb(190, 8, 8);
+    width: 70vw;
+    height: 25%;
+    background-color: rgb(30, 8, 83);
 }
