--- a/ATIVIDADE 3/style.css
+++ b/ATIVIDADE 3/style.css
@@ -4,6 +4,9 @@ body {
     font-family: monospace;
 }
 
+
+/*  INÍCIO DO CABEÇALHO */
+
 .header {
     border-bottom: 3px solid aqua;
 }
@@ -40,8 +43,16 @@ ul {
     align-items: center;
 }
 
+a {
+    text-decoration: none;
+    color: yellow;
+}
 
-/*  INÍCIO DO BANNER */
+
+/*  FIM DO CABEÇALHO */
+
+
+/*  INÍCIO DO BANNER - INDEX */
 
 .banner {
     background-image: url(imgs/bg-jelly-fish-para-home.png);
@@ -64,7 +75,113 @@ ul {
 }
 
 
-/*  FIM DO BANNER */
+/*  FIM DO BANNER - INDEX */
+
+
+/*  COMEÇO DO BANNER - LOGIN */
+
+.banner .container .card-l {
+    background-color: white;
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    color: rgb(97, 31, 130);
+    align-items: center;
+    border-radius: 4px;
+}
+
+.card-l h1 {
+    font-size: 30px;
+}
+
+.card-l h4 {
+    font-size: 15px;
+}
+
+.card-l input {
+    border: darkmagenta solid 3px;
+    padding: 10px;
+}
+
+.card-l button {
+    height: 30px;
+    width: 100px;
+    background-color: darkmagenta;
+    margin-top: 25px;
+    font-size: 20px;
+    font: bold 20px monospace;
+    border: 0;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+}
+
+
+/*  FIM DO BANNER - LOGIN */
+
+
+/*  COMEÇO DO BANNER - CADASTRO */
+
+.banner-c {
+    background-image: url(imgs/bg-jelly-fish-para-home.png);
+    height: 1000px;
+    color: white;
+    display: flex;
+}
+
+.banner-c .container p span {
+    font-weight: bold;
+}
+
+.banner-c .container {
+    justify-content: center;
+    font-size: 40px;
+}
+
+.banner-c .container p {
+    width: 30%;
+}
+
+.banner-c .container .card-c {
+    background-color: white;
+    height: 650px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    color: rgb(97, 31, 130);
+    align-items: center;
+    border-radius: 4px;
+}
+
+.card-c h1 {
+    font-size: 30px;
+}
+
+.card-c h4 {
+    font-size: 15px;
+}
+
+.card-c input {
+    border: darkmagenta solid 3px;
+    padding: 10px;
+}
+
+.card-c button {
+    height: 30px;
+    width: 150px;
+    background-color: darkmagenta;
+    margin-top: 25px;
+    font-size: 20px;
+    font: bold 20px monospace;
+    border: 0;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+}
+
+
+/*  FIM DO BANNER - CADASTRO */
 
 
 /*  COMEÇO DO SOCIAL */
@@ -108,44 +225,5 @@ ul {
     justify-content: center;
 }
 
-a {
-    text-decoration: none;
-    color: yellow;
-}
 
-.banner .container .card {
-    background-color: white;
-    height: 400px;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    color: rgb(97, 31, 130);
-    align-items: center;
-    border-radius: 4px;
-}
-
-.card h1 {
-    font-size: 30px;
-}
-
-.card h4 {
-    font-size: 15px;
-}
-
-.card input {
-    border: darkmagenta solid 3px;
-    padding: 10px;
-}
-
-.card button {
-    height: 30px;
-    width: 100px;
-    background-color: darkmagenta;
-    margin-top: 25px;
-    font-size: 20px;
-    font: bold 20px monospace;
-    border: 0;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-}
+/*  FIM DO FOOTER */
