--- a/ATIVIDADE 4/estilo.css
+++ b/ATIVIDADE 4/estilo.css
@@ -32,34 +32,45 @@ h1 {
     margin: auto;
 }
 
+
 /* Insira o código abaixo */
 
- .container1 {
-  
+.container1 {
+    display: flex;
 }
 
 .container2 {
-  
+    display: flex;
+    justify-content: right;
 }
 
 .container3 {
- 
+    display: flex;
+    justify-content: center;
 }
 
 .container4 {
-  
+    display: flex;
+    justify-content: space-between;
 }
+
 .container5 {
-  
+    display: flex;
+    justify-content: space-around;
 }
+
 .container6 {
-  
-} 
-
-.container-exercicio-B{
-
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.container-desafio{
+.container-exercicioB {
+    display: flex;
+    flex-direction: column-reverse;
+}
 
+.container-desafio {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
 }
